# human-agent-collaboration

./: .gitignore  README.md  config.py  config.toml  pipeline.py  pyproject.toml  reflection.md  run_all.py
agents/: __init__.py  base.py  long_context.py  model.py  rag.py  sequenced.py  summarization.py  types.py  utils.py
benchmarks/: __init__.py  base.py  hf_dataset.py  jsonl_dataset.py  registry.py  synthetic.py  synthetic_long_qa.py  synthetic_long_summary.py  synthetic_retrieval.py
eval/: __init__.py  evaluate_runs.py  metrics.py
latex/: Makefile  binhex.tex  comment.cut  paper.tex  software.bib
viz/: plot_metrics.py
