[project]
name = "paper-human-agent-collab"
version = "0.1.0"
description = "Evaluation harness for context-handling agents"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
  "transformers>=4.43.0",
  "accelerate>=0.33.0",
  "torch>=2.3.0",
  "bitsandbytes>=0.43.0",
  "sentence-transformers>=2.7.0",
  "faiss-gpu==1.7.2",
  "datasets>=2.20.0",
  "evaluate>=0.4.2",
  "pydantic>=2.8.0",
  "tqdm>=4.66.0",
  "pandas>=2.2.2",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.2",
  "numpy<2",
  "tomli>=2.0.1; python_version<'3.11'",
]

[tool.pyright]
venvPath = "."
reportMissingTypeStubs = false

[tool.setuptools.packages.find]
include = ["agents", "benchmarks", "eval", "viz"]
